Font Change and Some media addition

--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@
 
   <main class="main-content-container">
     <div class="panels">
-      <img src="" alt="">
+      <div class="panel-info">
+        <h1>Glamorus <br> Glam </h1><br>
+        <p>From casual to formal, we've got you covered</p>
+        <button>Shop collection &gt;</button>
+        <img src="" alt="">
+      </div>
     </div>
 
     <div class="price-drop">
