Some Border chanegs for panel and bottom info panel

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <main class="main-content-container">
     <div class="panels">
       <div class="panel-info">
-        <h1>Glamorus <br> Glam </h1><br>
+        <h1>Glamorus <br> Glam </h1> 
         <p>From casual to formal, we've got you covered</p>
         <button>Shop collection &gt;</button>
         <img src="" alt="">
@@ -230,14 +230,15 @@
       </div>
     </div>
 
-    <section class="bottom-info">
+
+    <div class="bottom-info">
       <div class="info">
         <div class="info-div"><img src="assets/logo/box.svg"><h1>Free Shipping</h1><p>Free shipping over order &#8377;500</p></div>
         <div class="info-div"><img src="assets/logo/credit-card-2-back-fill.svg" alt=""><h1>Flexible Payment</h1><p>Pay with Multiple Credit Cards</p></div>
         <div class="info-div"><img src="assets/logo/arrow-return-left.svg" alt=""><h1>14 Days Returns</h1><p>Within 30 Days for an exchange</p></div>
         <div class="info-div"><img src="assets/logo/person-raised-hand.svg" alt=""><h1>Premium Support</h1><p>Outstanding Premium Support</p></div>
       </div>
-    </section>
+    </div>
 
 
 
