--- a/index.html
+++ b/index.html
@@ -96,58 +96,59 @@
           </form>
         </div>
       </div>
-  </header>
-  <nav>
-    <div class="menu-bar">
-      <div class="logo">
-        <h1><span>E</span>zy<span>S</span>hop</h1>
+    </header>
+    <nav>
+      <div class="menu-bar">
+        <div class="logo">
+          <h1><span>E</span>zy<span>S</span>hop</h1>
+        </div>
+  
+        <div class="menu-dropdowns">
+          <select name="home" class="home-selector">
+            <option value="home">home</option>
+          </select>
+  
+          <select name="shop" class="shop-selector">
+            <option value="shop">shop</option>
+          </select>
+  
+          <select name="products" class="products-selector">
+            <option value="products">products</option>
+          </select>
+  
+          <select name="pages" class="pages-selector">
+            <option value="pages">pages</option>
+          </select>
+  
+          <select name="blog" class="blog-selector">
+            <option value="blog">blog</option>
+          </select>
+        </div>
+  
+        <div class="icons2">
+          <div class="profile">
+            <a href="#"><i class="fa-solid fa-user login-btn"></i></a>
+          </div>
+  
+          <div clas="search">
+            <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+          </div>
+  
+          <div class="wishlist">
+            <a href=""><i class="fa-solid fa-heart"></i></a>
+          </div>
+  
+          <div class="cart">
+            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          </div>
+        </div>
       </div>
-
-      <div class="menu-dropdowns">
-        <select name="home" class="home-selector">
-          <option value="home">home</option>
-        </select>
-
-        <select name="shop" class="shop-selector">
-          <option value="shop">shop</option>
-        </select>
-
-        <select name="products" class="products-selector">
-          <option value="products">products</option>
-        </select>
-
-        <select name="pages" class="pages-selector">
-          <option value="pages">pages</option>
-        </select>
-
-        <select name="blog" class="blog-selector">
-          <option value="blog">blog</option>
-        </select>
-      </div>
-
-      <div class="icons2">
-        <div class="profile">
-          <a href="#"><i class="fa-solid fa-user login-btn"></i></a>
-        </div>
-
-        <div clas="search">
-          <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-        </div>
-
-        <div class="wishlist">
-          <a href=""><i class="fa-solid fa-heart"></i></a>
-        </div>
-
-        <div class="cart">
-          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-      </div>
-    </div>
-  </nav>
-
-
+    </nav>
+  
+  
   <main class="main-content-container">
     <div class="panels">
+      <img src="assets/slideshow-img/fashion-slideshow-01.jpg" alt="">
       <div class="panel-info">
         <h1>Glamorus <br> Glam </h1> 
         <p>From casual to formal, we've got you covered</p>
@@ -176,28 +177,38 @@
     <div class="categories-item-list">
       <div class="categories-sec">
         <div class="item-container">
-          <div class="item">1</div>
+          <img src="assets/img/img1-purple.png">
+          <div class="categories-description">
+            Clothing
+          </div>
         </div>
+        
         <div class="item-container">
-          <div class="item">2</div>
+          <img src="assets/img/img2-sunglasses.jpg">
+          <div class="categories-description">
+            Sunglasses
+          </div>
         </div>
+
         <div class="item-container">
-          <div class="item">3</div>
+          <img src="assets/img/img3-bags.jpg">
+          <div class="categories-description">
+            Bags
+          </div>
         </div>
+
         <div class="item-container">
-          <div class="item">4</div>
+          <img src="assets/img/img4-fashion.jpg">
+          <div class="categories-description">
+            Fashion
+          </div>
         </div>
+
         <div class="item-container">
-          <div class="item">5</div>
-        </div>
-        <div class="item-container">
-          <div class="item">6</div>
-        </div>
-        <div class="item-container">
-          <div class="item">7</div>
-        </div>
-        <div class="item-container">
-          <div class="item">8</div>
+          <img src="assets/img/img5-accessories.jpg">
+          <div class="categories-description">
+            Accessories
+          </div>
         </div>
       </div>
     </div>
@@ -233,7 +244,7 @@
 
     <div class="bottom-info">
       <div class="info">
-        <div class="info-div"><img src="assets/logo/box.svg"><h1>Free Shipping</h1><p>Free shipping over order &#8377;500</p></div>
+        <div class="info-div"><img src="assets/logo/box.svg"><h1>Free Shipping</h1><p>Free shipping over order &#8377;1999</p></div>
         <div class="info-div"><img src="assets/logo/credit-card-2-back-fill.svg" alt=""><h1>Flexible Payment</h1><p>Pay with Multiple Credit Cards</p></div>
         <div class="info-div"><img src="assets/logo/arrow-return-left.svg" alt=""><h1>14 Days Returns</h1><p>Within 30 Days for an exchange</p></div>
         <div class="info-div"><img src="assets/logo/person-raised-hand.svg" alt=""><h1>Premium Support</h1><p>Outstanding Premium Support</p></div>
