--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!-- Head -->
 
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <title>Home Page</title>
@@ -100,29 +101,29 @@
     <nav>
       <div class="menu-bar">
         <div class="logo">
-          <h1><span>E</span>zy<span>S</span>hop</h1>
+          <a href="../index.html"><h1><span>E</span>zy<span>S</span>hop</h1></a>
         </div>
   
         <div class="menu-dropdowns">
           <select name="home" class="home-selector">
-            <option value="home">home</option>
+            <option value="home">Home</option>
           </select>
   
           <select name="shop" class="shop-selector">
-            <option value="shop">shop</option>
+            <option value="shop">Shop</option>
           </select>
   
           <select name="products" class="products-selector">
-            <option value="products">products</option>
+            <option value="products">Products</option>
           </select>
   
           <select name="pages" class="pages-selector">
-            <option value="pages">pages</option>
+            <option value="pages">Category</option>
           </select>
   
-          <select name="blog" class="blog-selector">
+          <!-- <select name="blog" class="blog-selector">
             <option value="blog">blog</option>
-          </select>
+          </select> -->
         </div>
   
         <div class="icons2">
@@ -139,7 +140,7 @@
           </div>
   
           <div class="cart">
-            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="pages/cart-page.html"><i class="fa-solid fa-cart-shopping"></i></a>
           </div>
         </div>
       </div>
@@ -219,19 +220,177 @@
         <p>Shop the Latest Styles: Stay ahead of the curve with our newest arrivals</p>
       </div>
     </div>
-    <div style="display:grid; justify-content: center; width: 100%; align-items: center;">
       <div class="container-cloths">
-        <div class="cloths-item">A</div>
-        <div class="cloths-item">B</div>
-        <div class="cloths-item">C</div>
-        <div class="cloths-item">D</div>
-        <div class="cloths-item">E</div>
-        <div class="cloths-item">A</div>
-        <div class="cloths-item">B</div>
-        <div class="cloths-item">C</div>
-      </div>
-    </div>
+        <div class="cloths-item">
+          <img src="assets/img/img1-purple.png">
+          <div class="item-logo-container">
+            <div class="cloths-item-logos">
+              <a href="" >
+                <i class="bi bi-heart-fill" ></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos">
+              <a href="">
+                <i class="bi bi-bag-plus-fill"></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos" >
+              <a href="" >
+                <i class="bi bi-eye-fill"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        
+          <div class="cloths-item">
+            <img src="assets/img/img1-purple.png">
+            <div class="item-logo-container">
+              <div class="cloths-item-logos">
+                <a href="" >
+                  <i class="bi bi-heart-fill" ></i>
+                </a>
+              </div>
+              <div class="cloths-item-logos">
+                <a href="">
+                  <i class="bi bi-bag-plus-fill"></i>
+                </a>
+              </div>
+              <div class="cloths-item-logos" >
+                <a href="" >
+                  <i class="bi bi-eye-fill"></i>
+                </a>
+              </div>
+            </div>
+          <!-- </div> -->
 
+        </div>
+
+        <div class="cloths-item">
+          <img src="assets/img/img1-purple.png">
+          <div class="item-logo-container">
+            <div class="cloths-item-logos">
+              <a href="" >
+                <i class="bi bi-heart-fill" ></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos">
+              <a href="">
+                <i class="bi bi-bag-plus-fill"></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos" >
+              <a href="" >
+                <i class="bi bi-eye-fill"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="cloths-item">
+          <img src="assets/img/img1-purple.png">
+          <div class="item-logo-container">
+            <div class="cloths-item-logos">
+              <a href="" >
+                <i class="bi bi-heart-fill" ></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos">
+              <a href="">
+                <i class="bi bi-bag-plus-fill"></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos" >
+              <a href="" >
+                <i class="bi bi-eye-fill"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="cloths-item">
+          <img src="assets/img/img1-purple.png">
+          <div class="item-logo-container">
+            <div class="cloths-item-logos">
+              <a href="" >
+                <i class="bi bi-heart-fill" ></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos">
+              <a href="">
+                <i class="bi bi-bag-plus-fill"></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos" >
+              <a href="" >
+                <i class="bi bi-eye-fill"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="cloths-item">
+          <img src="assets/img/img1-purple.png">
+          <div class="item-logo-container">
+            <div class="cloths-item-logos">
+              <a href="" >
+                <i class="bi bi-heart-fill" ></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos">
+              <a href="">
+                <i class="bi bi-bag-plus-fill"></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos" >
+              <a href="" >
+                <i class="bi bi-eye-fill"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="cloths-item">
+          <img src="assets/img/img1-purple.png">
+          <div class="item-logo-container">
+            <div class="cloths-item-logos">
+              <a href="" >
+                <i class="bi bi-heart-fill" ></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos">
+              <a href="">
+                <i class="bi bi-bag-plus-fill"></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos" >
+              <a href="" >
+                <i class="bi bi-eye-fill"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="cloths-item">
+          <img src="assets/img/img1-purple.png">
+          <div class="item-logo-container">
+            <div class="cloths-item-logos">
+              <a href="" >
+                <i class="bi bi-heart-fill" ></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos">
+              <a href="">
+                <i class="bi bi-bag-plus-fill"></i>
+              </a>
+            </div>
+            <div class="cloths-item-logos" >
+              <a href="" >
+                <i class="bi bi-eye-fill"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+    </div>
+    
     <div class="shop-the-look-title">
       <div>
         <h1>
